# CTDemo

./: .cproject  .gitignore  .parasoft  .project  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  cpptest-coverage.cmake  cpptestcli.properties  cpptestct.properties  goo_test.cpp  goo_test[1]_include.cmake  gtest_main.cpp
.build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  atm_gtest  atm_test  cmake_install.cmake  compile_commands.json  goo_test  goo_test[1]_include.cmake  goo_test[1]_tests.cmake  gtest_results.xml
.build/.cpptest/: cpptestcov-compute.log.1  cpptestcov-compute.log.2  cpptestcov-compute.log.4  (+20 more)
.coverage/: 1402c6ae.cov  1402f295.cov  271bbea5.cov  2e4dcf23.cov  36824aaa.cov  700b5ff.cov  772e23e4.cov  7e5c4499.cov  7e5ca8d2.cov  8bc8c25b.cov  8bc8d194.cov  9b68223d.cov  a0738b57.cov  a0739e90.cov  a7bc5b76.cov  coverage.html  coverage.index  coverage.md  coverage.txt  e14cc837.cov
.cpptest/: .dtp_services_cache  cpptest.log.1  cpptest.log.2  cpptest.log.3  cpptest.log.4  cpptest.log.5  cpptestcov-report-dtp.log.1  cpptestcov-report-dtp.log.2  cpptestcov-report-dtp.log.3  cpptestcov-report-dtp.log.4  cpptestcov-report-dtp.log.5  cpptestcov-report-stats-dtp.log.1  cpptestcov-report-stats-dtp.log.2  cpptestcov-report-stats-dtp.log.3  cpptestcov-report-stats-dtp.log.4  cpptestcov-report-stats-dtp.log.5
cpptest-runtime/: CMakeCache.txt  ImportCpptestRuntime.cmake  Makefile  cmake_install.cmake
include/: Account.hxx
reports/: report.html  report.xml
unitTests/: AccountTest.hpp  BaseDisplayTest.hpp
(+340 files in other folders)
